# edge_contour_detection

./: .gitignore  .pre-commit-config.yaml  README.md  project.md  pyproject.toml
.github/workflows/: ci.yml  pre-commit.yml  publish.yml  tests.yml
docs/: Makefile  algorithms.md  architecture.md  cli.md  conf.py  dataset.md  index.rst  make.bat  performance.md  usage.md
docs/_static/: custom.css
reports/performance/: performance.tex
src/edges/: __init__.py  __main__.py  config.py  console.py  contours.py  dataset.py  images.py  operators.py  pipeline.py  reporting.py
tests/: __init__.py  conftest.py  test_config.py  test_console.py  test_contours.py  test_dataset.py  test_images.py  test_main_module.py  test_operators.py  test_pipeline.py  test_reporting.py
